@@ -22,6 +22,7 @@ Release @version@-@release@ Start 11/09/2023 End --/--/----
 12. updated RCS logs for qmail-local.c, indimail-mta.spec, Makefile,
     filterit.c, filterit_sub.c
 13. test-indimail-mta: added tests for internal and external filterit command
+14. svctool: prevent dangling symbolic links in global_vars
 
 * Fri Sep 08 2023 11:58:03 +0000 Manvendra Bhangui <indimail-mta@indimail.org> 3.0.4-1.1%{?dist}
 Release 3.0.4-1.1 Start 24/04/2023 End 08/09/2023
